fix: text overflow after page load

--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,7 @@ body {
     display: none;
     position: absolute;
     overflow: hidden;
+    max-width: 50%;
     bottom: 0;
     color: white;
     overflow: hidden;
